--- a/configServer/src/main/resources/application.yml
+++ b/configServer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT:8888}
+  port: 8888
 
 spring:
   application:
@@ -8,7 +8,8 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/marinazv/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer.git
+          uri: https://github.com/marinazv/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer
           default-label: main
           force-pull: true
+
 
