--- a/api-serie/pom.xml
+++ b/api-serie/pom.xml
@@ -35,7 +35,14 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>4.2.3</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
