--- a/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer/api-catalog.yml
+++ b/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer/api-catalog.yml
@@ -3,6 +3,20 @@ server:
 spring:
   application:
     name: api-catalog
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
+  zipkin:
+    baseUrl: http://localhost:9411/
+  data:
+    mongodb:
+      database: catalog
+      port: 27019
+      authentication-database: admin
+      username: user
+      password: password
 info:
   application:
     name: api-catalog
@@ -15,3 +29,53 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+resilience4j:
+  
+  retry:
+    configs:
+      default:
+        max-retry-attempts: 3
+        wait-duration: 1s
+        retry-exceptions:
+          - java.io.IOException
+          - java.net.SocketTimeoutException
+      instances:
+        getSerieByGenre:
+          base-config: default
+          max-retry-attempts: 5
+          wait-duration: 2s
+          retry-exceptions:
+            - java.net.ConnectException
+            - java.net.UnknownHostException
+        getMovieByGenre:
+          base-config: default
+          max-retry-attempts: 5
+          wait-duration: 2s
+          retry-exceptions:
+            - java.net.ConnectException
+            - java.net.UnknownHostException
+  
+  circuitbreaker:
+    configs:
+      default:
+        register-health-indicator: true
+        sliding-window-size: 10
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        wait-duration-in-open-state: 30s
+        automatic-transition-from-open-to-half-open-enabled: true
+        failure-rate-threshold: 50
+    instances:
+      getSerieByGenre:
+        base-config: default
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 5
+        wait-duration-in-open-state: 1m
+        failure-rate-threshold: 40
+      getMovieByGenre:
+        base-config: default
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 5
+        wait-duration-in-open-state: 1m
+        failure-rate-threshold: 40      
