--- a/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer/api-serie.yml
+++ b/examen-esp-backend-ZuritaVerzini-Marina-ConfigServer/api-serie.yml
@@ -1,8 +1,9 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  port: ${PORT:0}
+
 spring:
   application:
-    name: api-movie
+    name: api-serie
   rabbitmq:
     username: guest
     password: guest
@@ -10,21 +11,20 @@ spring:
     port: 5672
   zipkin:
     baseUrl: http://localhost:9411/
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3308/movie-dev
-    username: usr-movie
-    password: pwd-movie
-  jpa:
-    hibernate.ddl-auto: update
-    generate-ddl: true
-    show-sql: true
+  mongodb:
+    embedded:
+      version: 4.0.2
+  data:
+    mongodb:
+      database: test
+      port: 27018
 
 info:
   application:
-    name: api-movie
-
+    name: api-serie
 eureka:
+  healthcheck:
+    enabled: true
   instance:
     hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
